# HW_2_06

./: .gitignore  README.md  college.db  main.py  pyproject.toml  test.py
sql/: create_all_tables.sql  drop_all_tables.sql  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
